# neatnik

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  Makefile  NEATenn  Neatnik  Pipeline.key  README.md  experiment  install.sh  mpi_master.py  mpi_worker.py  neatnik_filter.py  neatnik_xor.py  neatnik_xor_mpi.py  parameters.py
doc/: chromosome.md  experiment.md  genotype.md  genus.md  link.md  node.md  organism.md  parameters.md  phenotype.md  species.md
elements/: elements.cpp  elements.h  link.cpp  link.h  node.cpp  node.h
examples/: data.npy  data_selection.py  mpi_xor.py  organism.p  plot.py  xor.py
experiment/: experiment.cpp  experiment.h  parameters.cpp  parameters.h  pyexperiment.cpp  pyexperiment.h  pyparameters.cpp  pyparameters.h  stimuli.cpp  xor.cpp  xor.h
genotype/: chromosome.cpp  chromosome.h  genotype.cpp  genotype.h
genus/: genus.cpp  genus.h  group.cpp  group.h  pygenus.cpp  pygenus.h  pyspecies.cpp  pyspecies.h  species.cpp  species.h
guide/: chromosome.md  experiment.md  genotype.md  genus.md  link.md  node.md  organism.md  parameters.md  phenotype.md  species.md  utilities.md
headers/core/: chromosome.hpp  elements.hpp  experiment.hpp  genotype.hpp  genus.hpp  link.hpp  neatnik.hpp  node.hpp  organism.hpp  parameters.hpp  phenotype.hpp  species.hpp  utilities.hpp
headers/wrapper/: pychromosome.hpp  pyexperiment.hpp  pygenotype.hpp  pygenus.hpp  pyneatnik.hpp  pyorganism.hpp  pyparameters.hpp  pyspecies.hpp
innovation/: innovation.cpp  innovation.h
io/: io.cpp  io.h
main/: main.cpp  main.h
manual/: genus.md  node.md  organism.md  parameters.md  phenotype.md  species.md
neatnik/: neatnik.cpp  neatnik.h  pyneatnik.cpp  pyneatnik.h
organism/: organism.cpp  organism.h  pyorganism.cpp  pyorganism.h
phenotype/: phenotype.cpp  phenotype.h
population/: population.cpp  population.h  species.h
python/: pymodule.cpp
sources/core/: chromosome.cpp  elements.cpp  experiment.cpp  genotype.cpp  genus.cpp  link.cpp  neatnik.cpp  node.cpp  organism.cpp  parameters.cpp  phenotype.cpp  species.cpp  utilities.cpp
sources/wrapper/: pychromosome.cpp  pyexperiment.cpp  pygenotype.cpp  pygenus.cpp  pymodule.cpp  pyneatnik.cpp  pyorganism.cpp  pyparameters.cpp  pyspecies.cpp
src/elements/: elements.cpp  elements.hpp  link.cpp  link.hpp  node.cpp  node.hpp
src/experiment/: experiment.cpp  experiment.hpp  parameters.cpp  parameters.hpp  pyexperiment.cpp  pyexperiment.hpp  pyparameters.cpp  pyparameters.hpp
src/genotype/: chromosome.cpp  chromosome.hpp  genotype.cpp  genotype.hpp
src/genus/: genus.cpp  genus.hpp  pygenus.cpp  pygenus.hpp  pyspecies.cpp  pyspecies.hpp  species.cpp  species.hpp
src/neatnik/: neatnik.cpp  neatnik.hpp  pyneatnik.cpp  pyneatnik.hpp
src/organism/: organism.cpp  organism.hpp  pyorganism.cpp  pyorganism.hpp
src/phenotype/: phenotype.cpp  phenotype.hpp
src/python/: pymodule.cpp
src/stimuli/: data.cpp  stimuli.cpp
src/utils/: utils.cpp  utils.hpp
utils/: utils.cpp  utils.h
